maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:7: error: ')' expected but ',' found.
  for(x <- 0 to Largeur-1,y <- 0 to Hauteur-1) {
                         ^ShortestPathMaze:17: error: illegal start of simple expression
}
^ShortestPathMaze:29: error: ')' expected but ',' found.
    for (X <- 1 to Largeur-1,Y <- 1 to Hauteur-1) {
                            ^ShortestPathMaze:80: error: illegal start of simple expression
  }
  ^